Fix gaps (#1111)
Since the introduction of the grid system, margin collapse did not work between
the preamble and content as they are not in the same element.

It makes sense to have them in the same element, as they are to be displayed in
a single flow.

--- a/src/html_support_files/odoc.css
+++ b/src/html_support_files/odoc.css
@@ -307,8 +307,8 @@ body.odoc-src {
   margin-right: calc(10vw + 20ex);
 }
 
-.odoc-content {
-  grid-row: 4;
+.odoc-main {
+  grid-row: 3;
   grid-column: 2;
 }
 
@@ -320,11 +320,6 @@ body.odoc-src {
 
 header {
   margin-bottom: 30px;
-}
-
-header.odoc-preamble {
-  grid-column: 2;
-  grid-row: 3;
 }
 
 nav {
